--- a/app/views/gossips/show.html.erb
+++ b/app/views/gossips/show.html.erb
@@ -1,7 +1,19 @@
-<h1>Gossips#index</h1>
-<p>Find me in app/views/gossips/index.html.erb</p>
+<h1>Gossips n°<%= params[:id]%></h1>
 
-<%= @gossip.title %>
-<%= @gossip.content %>
+<p> Auteur : <%= @gossip.user.first_name %> <%= @gossip.user.last_name %> </p>
+<br>
+<p> <a> <%= link_to "Voir le profil de l'auteur", user_path %> </a> </p>
+<p> Ville : <%= @gossip.user.city.name %></p>
+<br>
+<p> <a> <%= link_to "Voir les gossips de cette ville", city_path(@gossip.user.city_id) %> </a> </p> 
+<p>Titre du gossip :<%= @gossip.title %></p>
+<br>
+<p>Le gossip : <%= @gossip.content %></p>
+<br>
 
-<%= @gossip.user.first_name %>
+<p> <a> <%= link_to "Met à jour ton potin !", edit_gossip_path %> </a> </p>
+<%= form_tag url_for(action: 'destroy'), method: "delete" do%>
+    <%= submit_tag "Supprimer le potin", class: 'btn btn-danger ml-3'%>
+        <% end %>
+
+Manque les commentaires
