--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -1,15 +1,50 @@
 <!DOCTYPE html>
 <html>
   <head>
-    <title>R20220505GossipProject</title>
+    <title>Fx-Gossip-Project</title>
     <%= csrf_meta_tags %>
     <%= csp_meta_tag %>
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" crossorigin="anonymous">
 
-    <%= stylesheet_link_tag    'application', media: 'all', 'data-turbolinks-track': 'reload' %>
-    <%= javascript_include_tag 'application', 'data-turbolinks-track': 'reload' %>
+    <%= stylesheet_link_tag    'application', media: 'all' %>
+    <%= javascript_include_tag 'application' %>
   </head>
 
   <body>
+  <div class="container">
+    <header class="d-flex flex-wrap justify-content-center py-3 mb-4 border-bottom">
+      <a href="/" class="d-flex align-items-center mb-3 mb-md-0 me-md-auto text-dark text-decoration-none">
+        <svg class="bi me-2" width="40" height="32"><use xlink:href="#bootstrap"/></svg>
+        <span class="fs-4">The Gossip Project</span>
+      </a>
+
+      <ul class="nav nav-pills">
+        <li class="nav-item"><a href="/" class="nav-link">Home</a></li>
+        <li class="nav-item"><a href="/team" class="nav-link">Team</a></li>
+        <li class="nav-item"><a href="/contact" class="nav-link">Contact us</a></li>
+        <li class="nav-item"><a href="/users/new" class="nav-link" >Inscription</a></li>
+        <li class="nav-item"><a class="nav-link" href="<%= new_session_path %>">Se connecter</a></li>
+        <li class="nav-item"><%= link_to "Se déconnecter", session_path(session.id), method: :delete, class: "nav-link" %></li>
+        
+
+      </ul>
+    </header>
+    <% if flash[:success] %>
+    <div class="alert alert-success mt-4" role="alert">
+    <%= flash[:success] %>
+    </div>
+    <% end %>
+    <% if flash[:error] %>
+    <div class="alert alert-danger mt-4" role="alert">
+    <%= flash[:error] %>
+    </div>
+    <% end %>
+  </div>
+
+
+  </div>
+ 
     <%= yield %>
+   
   </body>
 </html>
